--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
+                <!--                <action android:name="android.intent.action.SEND_MULTIPLE" />-->
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
