--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     defaultConfig {
         applicationId "com.example.accessibilitytalkmobileweek"
         minSdk 23
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -19,6 +19,7 @@ android {
     buildFeatures {
         // Enables Jetpack Compose for this module
         compose true
+        viewBinding true
     }
 
 
@@ -37,7 +38,7 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion '1.5.1'
+        kotlinCompilerExtensionVersion '1.5.4'
     }
     packagingOptions {
         jniLibs {
@@ -55,30 +56,33 @@ android {
 dependencies {
 
     // Import the Compose BOM
-    implementation platform('androidx.compose:compose-bom:2023.08.00')
+    implementation platform('androidx.compose:compose-bom:2023.10.01')
 
     // Override Material Design 3 library version with a pre-release version
-    implementation 'androidx.compose.material3:material3:1.2.0-alpha05'
+    implementation 'androidx.compose.material3:material3:1.2.0-alpha11'
 
-    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.espresso:espresso-accessibility:3.5.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     // Integration with activities
-    implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation 'androidx.activity:activity-compose:1.8.1'
     // Compose Material Design
-    implementation 'androidx.compose.material:material:1.5.0'
+    implementation 'androidx.compose.material:material'
     // Animations
     implementation 'androidx.compose.animation:animation'
     // Tooling support (Previews, etc.)
     implementation 'androidx.compose.ui:ui-tooling'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.6.0-beta01'
     // Integration with ViewModels
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0-alpha01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0-rc01'
     // UI Tests
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.5.0'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.5.3'
 
 }
